Upgrade from 17 to 25 with OpenRewrite